syntax = "proto3";

option csharp_namespace = "_365id.Glootie.Contracts.gRPC.Authentication";
option java_package = "com.id365.idverification.contracts.grpc.Authentication";

package _365id.Glootie.Contracts.gRPC.Authentication;


// This contains the Authentication service definition.

// The Authentication service definition.
service Authentication {
  // The next task that should be perfomed by the caller
  rpc Authenticate (AuthenticateRequest) returns (AuthenticateResponse);
  rpc RefreshToken (RefreshTokenRequest) returns (RefreshTokenResponse);
}

// Request to authenticate, using a license key
message AuthenticateRequest {
  // The license key
  string LicenseKey = 1;
  // ISO 639-1
  string LanguageCode = 2;
  // Unique device/vendor id
  string VendorId = 3;
}

// Authentication response, containint a token along with a refresh token
message AuthenticateResponse {
  // JWT token used to authenticate the client
  string Token = 1;

  // Refresh token used to issue a new token once it has expired
  string RefreshToken = 2;
}

// Request to refresh an expired token
message RefreshTokenRequest {
  // Refresh token used to authenticate the request. A refresh token
  // can only be used once, otherwise the token key ring is invalidated
  string RefreshToken = 1;
}

// The response from a request to refresh a token
message RefreshTokenResponse {
    // New token
    string Token = 1;

    // New refresh token
    string RefreshToken = 2;
}
